--- a/shop/index.html
+++ b/shop/index.html
@@ -101,13 +101,13 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="./img/placeholder-900x350.png" alt="First slide">
+              <img class="d-block img-fluid" src="https://assets.bigcartel.com/theme_images/33480730/THEKIKBACK_LOGO.jpg?auto=format&fit=max&w=1300" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="./img/placeholder-900x350.png" alt="Second slide">
+              <img class="d-block img-fluid" src="https://assets.bigcartel.com/theme_images/33480691/TKB4.jpg?auto=format&fit=max&w=1300" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="./img/placeholder-900x350.png" alt="Third slide">
+              <img class="d-block img-fluid" src="https://assets.bigcartel.com/theme_images/33480709/TKB13.jpg?auto=format&fit=max&w=1300" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -124,13 +124,18 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/237887243/9158E338-2F45-4D4A-91D1-66AB5673C8FE.jpeg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Item One</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <h5>$165.00</h5>
+                <p class="card-text">165.00
+                
+                  Alternate 4 
+                  Size 9 with original box 
+                  Shoes are in 9/10 condition 
+                  Shoes will be shipped double boxed with tracking</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
