--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<!-- -------------------------------------- -->
+<!-- -------------------------------------- -->
+<!-- -------------------------------------- -->
+<head> <!-- head begins here -->
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,39 +14,116 @@
   <title>Bare - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
+  <link href="style.css" rel="stylesheet">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/js/bootstrap.min.js">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-</head>
+  
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.slim.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  
 
-<body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+</head> <!-- head ends here -->
+<!-- -------------------------------------- -->
+<!-- -------------------------------------- -->
+<!-- -------------------------------------- -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- -------------------------------------- -->
+<!-- -------------------------------------- -->
+<!-- -------------------------------------- -->
+<body> <!-- body begins here -->
+
+  <header> <img src="./kickback.png" alt="kickback"> </header>
+
+  <!-- ======================================== -->
+  <!-- ======================================== -->
+  <!-- beginning of the top navigation bar -->
+  <div class="topnav">
+      <!doctype html>
+      <html lang="en">
+      <head>
+          <meta charset="UTF-8">
+          <title>CSS Only Navigation Menu</title>
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="style.css">
+      </head>
+      <body>
+          <label for="show-menu" class="show-menu">Show Menu</label>
+          <input type="checkbox" id="show-menu" role="button">
+              <ul id="menu">
+              <li><a href="#">Home</a></li>
+              <li>
+                  <a href="#">About ￬</a>
+                  <ul class="hidden">
+                      <li><a href="#">Who We Are</a></li>
+                      <li><a href="#">What We Do</a></li>
+                  </ul>
+              </li>
+              <li>
+                  <a href="#">Portfolio ￬</a>
+                  <ul class="hidden">
+                      <li><a href="#">Photography</a></li>
+                      <li><a href="#">Web & User Interface Design</a></li>
+                      <li><a href="#">Illustration</a></li>
+                  </ul>
+              </li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+      </body>
+      </html>
+    <a class="active" href="#home">Home</a>
+
+    <a href="#contact">Contact</a>
+    <input type="text" placeholder="Search..">
+    <div class="dropdown">
+      <button class="dropbtn">Dropdown 
+        <i class="fa fa-caret-down"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
+
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
       </div>
-    </div>
-  </nav>
+    </div> 
+
+    <div class="dropdown">
+      <button class="dropbtn">Dropdown 
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>  
+      </div>
+    </div> 
+    <!-- ending of the top navigation bar -->
+    <!-- ======================================== -->
+    <!-- ======================================== -->
+    <!-- ======================================== -->
+
+
+  </div>      
+
 
   <!-- Page Content -->
   <div class="container">
@@ -59,10 +139,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
