--- a/about/index.html
+++ b/about/index.html
@@ -91,8 +91,10 @@
         <div class="card h-100">
           <img class="card-img-top" src="./img/Retro13.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <h4 class="card-title">Air Jordan 13 Retro</h4>
+            <p class="card-text">Shown: White/Court Purple/University Gold/Black
+              Style: 414571-105
+            </p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -104,8 +106,11 @@
         <div class="card h-100">
           <img class="card-img-top" src="./img/Vapor.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <h4 class="card-title">Nike Air VaporMax Plus</h4>
+            <p class="card-text">Shown: Spirit Teal/Green Abyss/Black
+              Style: 924453-301
+
+            </p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -117,8 +122,11 @@
         <div class="card h-100">
           <img class="card-img-top" src="./img/Nike97.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <h4 class="card-title">Nike Air Max 97</h4>
+            <p class="card-text">Shown: Summit White/Black/Barely Volt/Summit White
+              Style: 921733-105
+
+            </p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -131,7 +139,10 @@
           <img class="card-img-top" src="./img/Nike95.PNG" alt="">
           <div class="card-body">
             <h4 class="card-title">Nike Air Max 95 Ep</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <p class="card-text">Shown: Black/Light Current Blue/Light Current Blue
+                Style: BV0044-001
+
+            </p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -164,3 +175,4 @@
 
 
 </html>
+
