--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
   <title>Bare - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="style.css" rel="stylesheet">
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="vendor/bootstrap/js/bootstrap.min.js">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="vendor/bootstrap/js/bootstrap.min.js">
+  <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
   
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.slim.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
   
 
 
@@ -33,81 +35,35 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- -------------------------------------- -->
 <!-- -------------------------------------- -->
 <!-- -------------------------------------- -->
-<body> <!-- body begins here -->
+
 
   <header> <img src="./kickback.png" alt="kickback"> </header>
-
+  <body> <!-- body begins here -->
   <!-- ======================================== -->
   <!-- ======================================== -->
   <!-- beginning of the top navigation bar -->
   <div class="topnav">
-      <!doctype html>
-      <html lang="en">
-      <head>
-          <meta charset="UTF-8">
-          <title>CSS Only Navigation Menu</title>
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link rel="stylesheet" href="style.css">
-      </head>
-      <body>
-          <label for="show-menu" class="show-menu">Show Menu</label>
-          <input type="checkbox" id="show-menu" role="button">
-              <ul id="menu">
-              <li><a href="#">Home</a></li>
-              <li>
-                  <a href="#">About ￬</a>
-                  <ul class="hidden">
-                      <li><a href="#">Who We Are</a></li>
-                      <li><a href="#">What We Do</a></li>
-                  </ul>
-              </li>
-              <li>
-                  <a href="#">Portfolio ￬</a>
-                  <ul class="hidden">
-                      <li><a href="#">Photography</a></li>
-                      <li><a href="#">Web & User Interface Design</a></li>
-                      <li><a href="#">Illustration</a></li>
-                  </ul>
-              </li>
-              <li><a href="#">News</a></li>
-              <li><a href="#">Contact</a></li>
-          </ul>
-      </body>
-      </html>
     <a class="active" href="#home">Home</a>
 
     <a href="#contact">Contact</a>
     <input type="text" placeholder="Search..">
     <div class="dropdown">
-      <button class="dropbtn">Dropdown 
+      <button class="dropbtn">Used (9/10 Condition) 
         <i class="fa fa-caret-down"></i>
       </button>
 
-      <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-      </div>
+      <ul class="dropdown-menu">
+        <li><a href="#">Page 1-1</a></li>
+        <li><a href="#">Page 1-2</a></li>
+        <li><a href="#">Page 1-3</a></li>
+      </ul>
     </div> 
 
     <div class="dropdown">
-      <button class="dropbtn">Dropdown 
+      <button class="dropbtn">Used (8/10 Condition) 
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
