--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!-- -------------------------------------- -->
 
 
-  <header> <img src="./kickback.png" alt="kickback"> </header>
+ <img src="./kickback.png" alt="kickback"> 
   <body> <!-- body begins here -->
   <!-- ======================================== -->
   <!-- ======================================== -->
@@ -67,7 +67,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Link 1</a>
+        <a href="<a href="./shop/index.html">here">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>  
       </div>
