--- a/shop/Category1.html
+++ b/shop/Category1.html
@@ -69,9 +69,9 @@
 
         <h1 class="my-4">Shop Name</h1>
         <div class="list-group">
-          <a href="./Category1.html" class="list-group-item">Used (9/10 condition)</a>
-          <a href="#" class="list-group-item">Used (8/10 condition)</a>
-          <a href="#" class="list-group-item">THEKIKBACKSTEALS $100 & Under</a>
+          <a href="./Used (9-10 Condition).html" class="list-group-item">Used (9/10 condition)</a>
+          <a href="./Used (8-10 Condition).html" class="list-group-item">Used (8/10 condition)</a>
+          <a href="TheKickbackSteals.html" class="list-group-item">THEKIKBACKSTEALS $100 & Under</a>
         </div>
 
       </div>
