--- a/shop/index.html
+++ b/shop/index.html
@@ -83,7 +83,7 @@
 
         <h1 class="my-4">Brand New</h1>
         <div class="list-group">
-          <a href="./Category1.html" class="list-group-item">Category 1</a>
+          <a href="#" class="list-group-item">Category 1</a>
           <a href="#" class="list-group-item">Category 2</a>
           <a href="#" class="list-group-item">Category 3</a>
         </div>
