--- a/shop/used-high-quality.html
+++ b/shop/used-high-quality.html
@@ -71,7 +71,7 @@
         <div class="list-group">
           <a href="./used-high-quality.html" class="list-group-item">Used Shoes (High Quality)</a>
           <a href="./used-good-quality.html" class="list-group-item">Used Shoes (Good Quality)</a>
-          <a href="./used-medium-quality.html" class="list-group-item">Used Shoes (Medium Quality)</a>
+          <a href="./TheKickbackSteals.html" class="list-group-item">The Kick Back Steals</a>
         </div>
 
       </div>
