--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
   <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  
+  
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
   
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.slim.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  
-
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
 </head> <!-- head ends here -->
 <!-- -------------------------------------- -->
@@ -40,15 +43,16 @@
 <!-- -------------------------------------- -->
 
 
- <img src="./kickback.png" alt="kickback"> 
+ 
   <body> <!-- body begins here -->
   <!-- ======================================== -->
   <!-- ======================================== -->
   <!-- beginning of the top navigation bar -->
   <div class="topnav">
+    
     <a class="active" href="#home">Home</a>
 
-    <a href="#contact">Contact</a>
+    <a href="#./contact">Contact</a>
     <input type="text" placeholder="Search..">
     <div class="dropdown">
       <button class="dropbtn">Used (9/10 Condition) 
@@ -71,6 +75,8 @@
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>  
       </div>
+
+
     </div> 
     <!-- ending of the top navigation bar -->
     <!-- ======================================== -->
