--- a/shop/page1.html
+++ b/shop/page1.html
@@ -232,15 +232,7 @@
 
   </div>
   <!-- /.container -->
-  <center>
-  <div class="pagination">
-      <a href="">&laquo;</a>
-      <a href="./shop/page1.html">1</a>
-      <a href="./shop/page2.html" class="active">2</a>
-      <a href="./shop/page3.html">3</a>
-      <a href="#">&raquo;</a>
-    </div>
-</center>
+
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
@@ -255,6 +247,11 @@
 
 <br>
 
+<div>
+<a>
+    <a href="#"
+</a>
+</div>
 
 
 
