--- a/shop/TheKickbackSteals.html
+++ b/shop/TheKickbackSteals.html
@@ -89,7 +89,7 @@
         </div>
 
       </div>
-      <!-- /.col-lg-3 -->
+      <!-- /.col-lg-3
 
       <div class="col-lg-9">
 
@@ -118,8 +118,24 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
-        </div>
-
+        </div> -->
+        <div id="scroll-animate">
+                <div id="scroll-animate-main">
+                  <div class="wrapper-parallax">
+                    <header>
+                      <h1> The Kickback Steals</h1>
+                    </header>
+              
+                    <section class="content">
+                      <h1></h1>
+                    </section>
+              
+                    <footer>
+                      <h1>Footer</h1>
+                    </footer>
+                  </div>
+                </div>
+              </div>
         <div class="row">
 
           <div class="col-lg-4 col-md-6 mb-4">
