--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="vendor/bootstrap/js/bootstrap.min.js">
   <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -25,7 +24,13 @@
   <script src="vendor/jquery/jquery.slim.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
+
+
+  <img src= "./kickback.png"
 
 
 </head> <!-- head ends here -->
@@ -51,27 +56,28 @@
 
     <a href="#./contact">Contact</a>
     <input type="text" placeholder="Search..">
-    <div class="dropdown">
-      <button class="dropbtn">Used (9/10 Condition) 
+    <div class="dropdown-w3">
+      <button class="dropbtn-w3">Used (9/10 Condition) 
         <i class="fa fa-caret-down"></i>
       </button>
 
-      <ul class="dropdown-menu">
-        <li><a href="#">Page 1-1</a></li>
-        <li><a href="#">Page 1-2</a></li>
-        <li><a href="#">Page 1-3</a></li>
+      <ul class="dropdown-content-w3">
+        <li><a href="#">Page1</a></li>
+        <li><a href="#">Page2</a></li>
+        <li><a href="#">Page3</a></li>
       </ul>
     </div> 
 
-    <div class="dropdown">
-      <button class="dropbtn">Used (8/10 Condition) 
+    <div class="dropdown-w3">
+      <button class="dropbtn-w3">Used (8/10 Condition) 
         <i class="fa fa-caret-down"></i>
       </button>
-      <div class="dropdown-content">
-        <a href="<a href="./shop/index.html">here">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>  
-      </div>
+      
+      <ul class="dropdown-content-w3">
+        <li><a href="#">Page1</a></li>
+        <li><a href="#">Page2</a></li>
+        <li><a href="#">Page3</a></li>
+      </ul>
 
       
     </div> 
