--- a/shop/Page1.html
+++ b/shop/Page1.html
@@ -207,9 +207,9 @@
   <center>
       <div class="pagination">
      
-          <a class="active" href="./page1.html">1</a>
-          <a href="./Page2.html">2</a>
-          <a href="./Page3.html">3</a>
+          <a href="./page1.html" class="active">1</a>
+          <a href="./page2.html">2</a>
+          <a href="./page3.html">3</a>
 
         </div>
       </center>
