--- a/shop/Page3.html
+++ b/shop/Page3.html
@@ -208,8 +208,8 @@
       <div class="pagination">
      
           <a href="./page1.html">1</a>
-          <a href="./Page2.html">2</a>
-          <a href="./Page3.html" class="active">3</a>
+          <a href="./page2.html">2</a>
+          <a href="./page3.html" class="active">3</a>
 
         </div>
       </center>
