--- a/shop/index.html
+++ b/shop/index.html
@@ -81,11 +81,11 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Shop Name</h1>
+        <h1 class="my-4">Brand New</h1>
         <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
+          <a href="./Used (8-10 Condition).html" class="list-group-item">9/10 Condition</a>
+          <a href="./Used (9-10 Condition).html" class="list-group-item">8/10 Condition</a>
+          <a href="./KB-steals.html" class="list-group-item">Kick Back Steals Unnder $100</a>
         </div>
 
       </div>
