--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -92,10 +92,10 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="./img/placeholder-900x400.png" alt="">
+          <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/240024398/163FA084-9FA2-4FEB-8D91-65B556117EA7.jpeg?auto=format&fit=max&h=1000&w=1000" alt="">
           <div class="card-body">
-            <h3 class="card-title">Product Name</h3>
-            <h4>$24.99</h4>
+            <h3 class="card-title">Last Shot 14's</h3>
+            <h4>$120.00</h4>
             <p class="card-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Sapiente dicta fugit fugiat hic aliquam itaque facere, soluta. Totam id dolores,
