--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
         <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
         <ul class="list-unstyled">
-          <li>View the <i>Shopping</i> page by clicking <a href="./shop/index.html">here</a>.</li>
+          <li>View the <i>Shopping</i> page by clicking <a href="./shop/category1/page1.html">here</a>.</li>
           <li>View the <i>Purchase</i> page by clicking <a href="./purchase-item/index.html">here</a>.</li>
           <li>View the <i>About Us</i> page by clicking <a href="./about/index.html">here</a>.</li>
         </ul>
