--- a/shop/category1/page3.html
+++ b/shop/category1/page3.html
@@ -83,9 +83,9 @@
 
         <h1 class="my-4">Shop Name</h1>
         <div class="list-group">
-          <a href="./page1.html" class="list-group-item">Category 1</a>
-          <a href="../category2/page1.html" class="list-group-item">Category 2</a>
-          <a href="../category3/page1.html" class="list-group-item">Category 3</a>
+          <a href="../category1/page1.html" class="list-group-item">Used (9/10 Condition)</a>
+          <a href="../category2/page1.html" class="list-group-item">Used (8/10 Condition)</a>
+          <a href="../category3/page1.html" class="list-group-item">KickBack Steals </a>
         </div>
 
       </div>
