--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -94,7 +94,7 @@
         <div class="card mt-4">
           <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/240024398/163FA084-9FA2-4FEB-8D91-65B556117EA7.jpeg?auto=format&fit=max&h=1000&w=1000" alt="">
           <div class="card-body">
-            <h3 class="card-title">Last Shot 14's</h3>
+            <h3 class="card-title">Sneaker's</h3>
             <h4>$120.00</h4>
             <p class="card-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
