--- a/shop/category1/page2.html
+++ b/shop/category1/page2.html
@@ -81,7 +81,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Shop Name</h1>
+        <h1 class="my-4">Brand New</h1>
         <div class="list-group">
           <a href="../category1/page1.html" class="list-group-item">Used (9/10 Condition)</a>
           <a href="../category2/page1.html" class="list-group-item">Used (8/10 Condition)</a>
@@ -101,9 +101,9 @@
               <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/224601373/A1C7493C-4AD9-4F04-B5A4-7D4BE6E7CA0D.jpeg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">Court Purple 1's</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$300.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -114,29 +114,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222658540/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">Yeezy Butter 350 V2's</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Item One</a>
-                </h4>
-                <h5>$24.99</h5>
+                <h5>$350.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -148,12 +131,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222506755/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">Hare 7's</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$225.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -165,12 +148,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222514258/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">Altitude 13's</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$120.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -182,12 +165,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222513739/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">Chris Paul Away 13's</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$250.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -199,12 +182,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222513754/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">Travis Scott Air Force Low Sail's</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$650.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -216,12 +199,29 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/220897591/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Two</a>
+                  <a href="#">Win Like 96 11's</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$220.00</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222034243/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">Game Royal 1</a>
+                </h4>
+                <h5>$300.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="card-footer">
@@ -232,12 +232,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/220321912/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Three</a>
+                  <a href="#">Air Max 1 Just Do It</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$150.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -248,12 +248,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/216727000/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Four</a>
+                  <a href="#">Black Laser 1's</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$450.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -264,12 +264,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222573265/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Five</a>
+                  <a href="#">Shadows 1's</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>$350.00</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="card-footer">
@@ -280,10 +280,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222880882/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Six</a>
+                  <a href="#">True Blue 3's</a>
                 </h4>
                 <h5>$24.99</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
