--- a/shop/category1/page2.html
+++ b/shop/category1/page2.html
@@ -104,7 +104,13 @@
                   <a href="#">Court Purple 1's</a>
                 </h4>
                 <h5>$300.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">
+                  <br>Description:</br>
+                  <ul>
+                    <li> Size 13 and 14 with original box</li>
+                    <li>Shoes will be shipped doulble boxed with tracking</li>
+                  </ul>
+                </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -120,7 +126,15 @@
                   <a href="#">Yeezy Butter 350 V2's</a>
                 </h4>
                 <h5>$350.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">
+                  <br> Descripton:</br>
+                  <ul>
+                    <li>Shoes are in brand new condtion</li>
+                    <li>Sizes 9, 10, and 12 are avialable with orignal box</li>
+                    <li>Shoes will be shipped double bowed with tracking</li>
+                  </ul>
+
+                </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -137,7 +151,14 @@
                   <a href="#">Hare 7's</a>
                 </h4>
                 <h5>$225.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">
+                  <br>Description:</br>
+                <ul>
+                  <li> Shoes are in brand new condtion</li>
+                  <li>Size 11.5 comes with original box</li>
+                  <li>Shoes will be shipped double boxed with tracking</li>
+                </ul> 
+                </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -154,7 +175,14 @@
                   <a href="#">Altitude 13's</a>
                 </h4>
                 <h5>$120.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">
+                  <br>Description:</br>
+                  <ul>
+                    <li>Size 10.5 comes with original box</li>
+                    <li> The condtion of Altitude 13's varies by size</li>
+                    <li>Shoes will be shipped double boxed with tracking</li>
+                  </ul>
+                </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -171,7 +199,14 @@
                   <a href="#">Chris Paul Away 13's</a>
                 </h4>
                 <h5>$250.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">
+                  <br> Description</br>
+                  <ul>
+                    <li>Size 10.5 comes with original box</li>
+                    <li>Shoes are in brand new conditon </li>
+                    <li> Shoes will be shipped double boxed with tracking</li>
+                  </ul>
+                </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -188,7 +223,14 @@
                   <a href="#">Travis Scott Air Force Low Sail's</a>
                 </h4>
                 <h5>$650.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">
+                  <br> Description:</br>
+                  <ul>
+                    <li>Size 7 comes with oriinal box</li>
+                    <li> Shoes are in brand new condition</li>
+                    <li>Shoes will be shipped with double boxed with tracking</li>
+                  </ul>
+                </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -205,7 +247,14 @@
                   <a href="#">Win Like 96 11's</a>
                 </h4>
                 <h5>$220.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">
+                  <br>Description:</br>
+                  <ul>
+                    <li>Size 13 comes with original box</li>
+                    <li>The Win Like 96 11's condition  varies by size</li>
+                    <li>Shoes will be shipped double boxed with tracking</li>
+                  </ul>
+                </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -222,7 +271,11 @@
                   <a href="#">Game Royal 1</a>
                 </h4>
                 <h5>$300.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">
+                  <br>Description:</br>
+                  <ul>Size 9.5, 10, and 12 comes with original box</ul>
+                  <li
+                </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
