--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           
         </li>
-<!-- NavBar begins here -->
+<!-- NavBar Ends here -->
   
 
-<!-- DropDown NavBar 1  -->
+<!-- DropDown NavBar 1 Begins Here  -->
   <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Shop All Shoes & Sizes
@@ -50,12 +50,12 @@
         <a class="dropdown-item" href="./shop/used-8.10/page1.hmtl">Used (8/10 Condition)</a>
         <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
       </div>
-<!-- Dropdown NavBar 2 Ends Here -->
+<!-- Dropdown NavBar 1 Ends Here -->
 
             
 
 
-<!-- DropDown NavBar 2  -->
+<!-- DropDown NavBar 2 Begins Here -->
 <li class="nav-item dropdown">
   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Repair
