--- a/shop/brand-new/page1.html
+++ b/shop/brand-new/page1.html
@@ -25,7 +25,13 @@
 <!-- ----------------------------------------------------------------- -->
 
 
-
+ <!-- Footer -->
+ <footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white"> The Kikback &copy; 2019</p>
+  </div>
+  <!-- /.container -->
+</footer>
 
 
 
