--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -71,10 +71,10 @@
 
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="../shop/Brand-new/page1.html">Brand New</a>
-        <a class="dropdown-item" href="../shop/used-9.10/page1.html">Used (9/10 Condition)</a>
-        <a class="dropdown-item" href="../shop/used-8.10/page1.hmtl">Used (8/10 Condition)</a>
-        <a class="dropdown-item" href="../shop/kickback-steals/page1.html">KickBack Steals</a>
+        <a class="dropdown-item" href="../Brand-new/page1.html">Brand New</a>
+        <a class="dropdown-item" href="../used-9.10/page1.html">Used (9/10 Condition)</a>
+        <a class="dropdown-item" href="../used-8.10/page1.hmtl">Used (8/10 Condition)</a>
+        <a class="dropdown-item" href="../kickback-steals/page1.html">KickBack Steals</a>
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
