--- a/shop/kickback-steals/page2.html
+++ b/shop/kickback-steals/page2.html
@@ -320,12 +320,13 @@
 
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+ <footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white"> The KickBack &copy; 2019</p>
+  </div>
+ 
+</footer>
+  
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
