--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item" href="./shop/Brand-new/page1.html">Brand New</a>
         <a class="dropdown-item" href="./shop/used-9.10/page1.html">Used (9/10 Condition)</a>
-        <a class="dropdown-item" href="./shop/used-8.10/page1.hmtl">Used (8/10 Condition)</a>
+        <a class="dropdown-item" href="./shop/used-8.10/page1.html">Used (8/10 Condition)</a>
         <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
@@ -84,11 +84,6 @@
 </nav>
 <!--/NavBar Ends here-->
 
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 447b72baed8e2b4b6c967d512143fd7aff7b0f84
   <!-- Page Content -->
   <div class="container">
     <div class="row">
