--- a/shop/used-8.10/page1.html
+++ b/shop/used-8.10/page1.html
@@ -99,10 +99,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/237886400/BF22CC9E-A179-4AB4-A99B-5238F3F55565.jpeg?auto=format&fit=max&h=600&w=600" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/237886682/781C2795-3169-467A-8687-648ABE3A8407.jpeg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Duke Kyrie 5's</a>
+                  <a href="#">Desert Sand 14's</a>
                 </h4>
                 <h5>$165.00
                 </h5>
@@ -119,10 +119,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/233969501/B595485E-5580-4FB9-942D-1069233A9BD6.jpeg?auto=format&fit=max&h=600&w=600" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222514258/product_image.jpg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Turbo Green 1's</a>
+                  <a href="#">Altitude 13's</a>
                 </h4>
                 <h5>$275.00</h5>
                 <p class="card-text">Turbo Green 1 
