--- a/shop/kickback-steals/page1.html
+++ b/shop/kickback-steals/page1.html
@@ -117,10 +117,11 @@
 
         <h1 class="my-4">Brand New</h1>
         <div class="list-group">
-          <a href="../category3/page1.html" class="list-group-item">Used (9/10 Condition)</a>
-          <a href="../category2/page1.html" class="list-group-item">Used (8/10 Condition)</a>
-          <a href="../category1/page1.html" class="list-group-item">KickBack Steals </a>
-        </div>
+          <div class="list-group">
+            <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
+            <a href="../used-8.10/page1.html" class="list-group-item">Used (8/10 Condition) </a>
+            <a href="../kickback-steals/page1.html" class="list-group-item">KickBack Steals</a>
+          </div>
 
       </div>
       <!-- /.col-lg-3 -->
