--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -138,8 +138,18 @@
         </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="
-        " alt="">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/239559200/0DC83EC5-0DBF-458D-A201-296DEF153942.jpeg?auto=format&fit=max&h=600&w=600"">
+        <div class="card-body">
+          <h3 class="card-title">Pantone 11 HIgh's</h3>
+          <h4>$300.00</h4>
+          <p class="card-text">
+          </p>
+          <span class="text-warning"></span>
+          SOLD OUT!
+        </div>
+       <!-- ----------------------------------------------------------------- -->
+       <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/238100960/FF1BE55E-0B93-4A48-8C3E-887D89772DED.jpeg?auto=format&fit=max&h=600&w=600"">
         <div class="card-body">
           <h3 class="card-title">Sneaker's</h3>
           <h4>$120.00</h4>
@@ -149,7 +159,21 @@
           SOLD OUT!
         </div>
        <!-- ----------------------------------------------------------------- -->
-        <!-- /.card -->
+       <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/238100960/FF1BE55E-0B93-4A48-8C3E-887D89772DED.jpeg?auto=format&fit=max&h=600&w=600"">
+        <div class="card-body">
+          <h3 class="card-title">Sneaker's</h3>
+          <h4>$120.00</h4>
+          <p class="card-text">
+          </p>
+          <span class="text-warning"></span>
+          SOLD OUT!
+        </div>
+       <!-- ----------------------------------------------------------------- -->
+      <!-- ----------------------------------------------------------------- -->
+      <!-- ----------------------------------------------------------------- -->
+      <!-- ----------------------------------------------------------------- -->
+       <!-- /.card -->
 
         <div class="card card-outline-secondary my-4">
           <div class="card-header">
@@ -173,9 +197,9 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white"> The KickBack &copy; 2019</p>
     </div>
-    <!-- /.container -->
+   
   </footer>
 
   <!-- Bootstrap core JavaScript -->
