--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- Dropdown NavBar 2 Ends Here -->
     
     <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="./about/index.html">About</a>
         <li class="nav-item">
             <a class="nav-link" href="#">Accesories</a>
             
