--- a/shop/used-8.10/page1.html
+++ b/shop/used-8.10/page1.html
@@ -19,6 +19,18 @@
   <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
 
+  <!-- social Icons Begin -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+<!-- s=Social Icons End -->
+
+
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
@@ -93,7 +105,7 @@
     <!-- Dropdown NavBar 2 Ends Here -->
         
         <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="../../about/index.html">About</a>
             <li class="nav-item">
                 <a class="nav-link" href="#">Accesories</a>
                 
@@ -116,7 +128,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Size 9/10 Condition</h1>
+        <h1 class="my-4">Size 8/10 Condition</h1>
         <div class="list-group">
             <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
             <a href="../used-8.10/page1.html" class="list-group-item">Used (8/10 Condition) </a>
@@ -196,6 +208,15 @@
  <footer class="py-5 bg-dark">
   <div class="container">
     <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
+
+    <div class="social-icons">
+        <a href="https://www.instagram.com/thekikback/">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://facebook.com/thekikback">
+          <i class="fab fa-facebook"></i>
+        </a>  
+
   </div>
  
 </footer>
